--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "base-64": "^1.0.0",
     "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
