--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
